<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bottle Flip Connection Client</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="pref_connection">Connection Settings</string>
    <string name="pref_uri">URI</string>
    <string name="pref_uri_summary">%sws(s)://localhost:8080/Thingworx/WS</string>
    <string name="pref_app_key">App Key</string>
    <string name="pref_app_key_summary">From your server under "Application Keys"</string>
    <string name="sensor_mac_address">Sensor MAC Address</string>
    <string name="sensor_mac_address_summary">MAC Address of the Bluetooth Sensor</string>
    <string name="sensor_thingworx_identifier">Remote Thing Identifier</string>
    <string name="sensor_thingworx_identifier_summary">Specifies which Remote Thing in Thingworx to Bind To.</string>
    <string name="uri_default_value">wss://pp-20170414201908188.portal.ptc.io/Thingworx/WS</string>
    <string name="app_key_default_value">8f263044-d191-4e8a-97a7-ece9f1867afc</string>
    <string name="mac_addr_default_value">DE:74:1D:B3:7D:8B</string>
    <string name="remote_thing_identifier_default_value">Bottle1</string>

</resources>
